Updated site: Added scroll for overflow-y on body for quick fix for mobile (Safari).

--- a/styles/todo-base.css
+++ b/styles/todo-base.css
@@ -151,6 +151,8 @@ body {
     
     font-family: 'Stribe-Basic', serif;
     
+    margin: 0;
+    
     width: 100vw;
     height: 100vh;
     
@@ -166,6 +168,7 @@ body {
     background-color: var(--color-bank-dune);
     
     overflow: hidden;
+    overflow-y: scroll;
     
 }
 
